Fix scrollbar thumb

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -240,7 +240,7 @@ nav ul {
   width: 12px;
   height: 12px;
   background-color: var(--secondary-dark);
-  border-radius: 50%;
+  border-radius: 10px;
 }
 
 .json code {
